--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <h1>რეგისტრაცია</h1>
     <div class="buttons">
-      <button class="butt" id="Tasker">ტასკერი</button>
-      <button class="butt"id="NotTasker">შემსრულებელი</button>
+      <button  id="Tasker">ტასკერი</button>
+      <button  id="NotTasker">შემსრულებელი</button>
     </div>
     <form>
       <input class="signUp"type="text" name="full name" placeholder="სახელი და გვარი" required>
