--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h2>ავტორიზაცია</h2>
     </div>
     <h1>რეგისტრაცია</h1>
-    <div class="buttons">
-      <button  id="Tasker">ტასკერი</button>
-      <button  id="NotTasker">შემსრულებელი</button>
+    <div>
+      <button class="buttons" id="Tasker">ტასკერი</button>
+      <button class="buttons" id="NotTasker">შემსრულებელი</button>
     </div>
     <form>
       <input class="signUp"type="text" name="full name" placeholder="სახელი და გვარი" required>
