--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <img id="logo" src="Tasker Logo_2020-02-06/Tasker Logo@2x.png" alt="TASKER">
     <div class="fr">
       <a href="#" id="backbtn"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
       <h2>ავტორიზაცია</h2>
@@ -27,7 +28,6 @@
       <input class="signUp" type="password" name="password" placeholder="გაიმეორეთ პაროლი" required>
       <input class="sub" type="submit" value="გაგრძელება">
     </form>
-
   </div>
 </body>
 </html>
