changed and added class names

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <div class="wrapper">
-    <img id="logo" src="Logo/Tasker Logo@2x.png" alt="TASKER">
-    <div class="fr">
+    <img id="logo" src="Logo/Tasker.png" alt="TASKER">
+    <div class="FirstBtnLine">
       <a href="#" id="backbtn"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
       <h2>ავტორიზაცია</h2>
     </div>
     <h1>რეგისტრაცია</h1>
-    <div>
+    <div class="UserChoicebtns">
       <button class="buttons" id="Tasker">ტასკერი</button>
       <button class="buttons" id="NotTasker">შემსრულებელი</button>
     </div>
