added class for Phone number input

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <form>
       <input class="signUp"type="text" name="full name" placeholder="სახელი და გვარი" required>
-      <input class="signUp" type="text" name="phone number" placeholder="ტელეფონის ნომერი" required>
+      <input class="signUp PhoneNum" type="text" name="phone number" placeholder="ტელეფონის ნომერი" required>
       <input class="signUp" type="email" name="email" placeholder="ელ-ფოსტა" required>
       <input class="signUp" type="password" name="password" placeholder="პაროლი" required>
       <input class="signUp" type="password" name="password" placeholder="გაიმეორეთ პაროლი" required>
